# gadeu

./: .gitattributes  .gitignore  README.md  pyproject.toml
.gitea/workflows/: pipeline.yaml
.scripts/: init-venv.ps1  init-venv.sh  publish-packages.sh  with-venv.sh
docs/: conf.py  contact.rst  index.rst  quickstart.rst  requirements.txt
docs/ref/: AuthorizationManager.rst  AuthorizationMethod.rst  TokenUtil.rst  index.rst
docs/ref/authorization/: apiKey.rst  bearerToken.rst  index.rst
docs/ref/handlers/: ApiKeyAuthorizationHandler.rst  AuthorizationHandler.rst  BearerTokenAuthorizationHandler.rst  index.rst
gadeu/: AuthorizationManager.py  AuthorizationMethod.py  TokenUtil.py  __init__.py
gadeu/authorization/: __init__.py  apiKey.py  bearerToken.py
gadeu/handlers/: ApiKeyAuthorizationHandler.py  AuthorizationHandler.py  BearerTokenAuthorizationHandler.py  __init__.py
tests/: BasicVerificationTests.py  TokenUtilTests.py  TornadoTests.py
tests/fakes/: FakeApi.py
